--- a/packages/moduleB/package.json
+++ b/packages/moduleB/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lky": "echo \"Error: no test specified\" && echo \"AA\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "core": "^1.0.113",
     "lodash": "^4.17.21"
   }
 }
