--- a/package.json
+++ b/package.json
@@ -1,10 +1,34 @@
 {
   "name": "root",
   "private": true,
+  "scripts": {
+    "lky": "node -v",
+    "lerna": "lerna",
+    "reset": "npm run clean && lerna clean",
+    "clean": "rimraf dist && rimraf test-reports",
+    "build": "babel src -d dist"
+  },
   "workspaces": [
     "packages/*"
   ],
   "devDependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.13",
+    "@babel/preset-env": "^7.18.10",
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "lerna": "^5.5.0"
+  },
+  "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.1.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "glob": "^8.0.3",
+    "globby": "^13.1.2"
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint"
   }
 }
